[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/PlayerGrab.gd" type="Script" id=1]

[sub_resource type="CapsuleMesh" id=1]

[sub_resource type="CapsuleShape" id=2]

[sub_resource type="CubeMesh" id=3]

[node name="PlayerGrab" type="KinematicBody"]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 2 )

[node name="UI" type="Control" parent="."]
margin_right = 1026.0
margin_bottom = 602.0

[node name="InteractLabel" type="Label" parent="UI"]
visible = false
margin_left = 9.0
margin_top = 515.0
margin_right = 1022.0
margin_bottom = 546.0
text = "Press left click to pick up"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Head" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0 )
current = true
fov = 104.2

[node name="InteractRayCast" type="RayCast" parent="Head"]
enabled = true
cast_to = Vector3( 0, 0, -4 )
collide_with_areas = true

[node name="Box" type="MeshInstance" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, -0.4, -1.55 )
visible = false
mesh = SubResource( 3 )
material/0 = null

[node name="CrateSpawnPoint" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.330407, -4.42467 )
visible = false
